2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/awt/Window.java (isDisplayable): Do not call super's
	isDisplayable.

2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR swing/23796
	* gnu/java/awt/peer/gtk/GtkDialogPeer.java
	(create): Respect dialog's decorated flag.

2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR swing/23558
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
	(window_get_new_state): Remove function.
	(window_get_new_state): Mark widget parameter as unused.  Remove
	call to window_get_new_state.
	(window_active_state_change_cb): Remove function.
	(connectSignals): Do not connect window_active_state_change_cb
	callback.

2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR swing/23796
	* gnu/java/awt/peer/gtk/GtkFramePeer.java (create): Respect
	frame's decorated flag.

2005-09-09  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(installDefaults): Fixed method signature.
	(uninstallDefaults): Likewise.
	(uninstallUI): Fixed call to uninstallDefaults.
	(installUI): Fixed call to installDefaults.
	* javax/swing/JPopupMenu.java
	(HeavyWeightPopup): Fixed to extend JDialog, since
	nothing is added to the taskbar with JDialog. Also, 
	fixed so the popup menu is undecorated. Frames and
	title bars should not be drawn, when popup is a 
	HeavyWeightPopup. A new bug was filed since the
	decorated and undecorated frames are all drawn 
	alike.
	* javax/swing/JRootPane.java
	(setWindowDecorationStyle): Added check for
	PLAIN_DIALOG.

2005-09-09  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Added the remaining color defaults.

2005-09-09  Andrew Haley  <aph@redhat.com>

	* java/net/URLClassLoader.java (addURLImpl): Synchronize on the
	loader.
	(toString): Likewise.

2005-09-09  Jeroen Frijters  <jeroen@frijters.net>

	* javax/security/auth/login/Configuration.java