@@ -1,3 +1,8 @@
+2005-09-09  Roman Kennke  <kennke@aicas.com>
+
+	* javax/swing/text/html/CSS.java
+	New file. Defines standard CSS attributes.
+
 2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* java/awt/Window.java (isDisplayable): Do not call super's
